[package]
name = "structure-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.4"
num-traits = "0.2.18"
rand = "0.8.5"
random_name_generator = "0.3.6"
text_io = "0.1.12"
termion = "1.5"
